Worked on fixing bugs.

--- a/footprint-logger-backend/.env
+++ b/footprint-logger-backend/.env
@@ -1,16 +1,5 @@
-# Node modules
-node_modules/
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment variables
-.env
-
-# OS files
-.DS_Store
-Thumbs.db
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/footprint   # if local MongoDB
+# or for MongoDB Atlas:
+# MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/footprint
+JWT_SECRET=supersecretkey
