--- a/footprint-logger-backend/.env
+++ b/footprint-logger-backend/.env
@@ -1,5 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/footprint   # if local MongoDB
-# or for MongoDB Atlas:
-# MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/footprint
+MONGO_URI=mongodb+srv://diksonmanganyi179_db_user:7c74t5ZwbxngKNtN@cluster0.jpvbae4.mongodb.net/footprint?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=supersecretkey
