--- a/footprint-logger-backend/package.json
+++ b/footprint-logger-backend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["footprint-logger", "carbon"],
+  "keywords": [
+    "footprint-logger",
+    "carbon"
+  ],
   "author": "Dikson Manganye",
   "license": "ISC",
   "description": "",
